fixed service page, testimonial and overflow issue

--- a/wack-styling.css
+++ b/wack-styling.css
@@ -2,6 +2,7 @@
 
 body {
 	position: relative;
+	margin: 0;
 }
 
 .sidebar {
@@ -82,6 +83,10 @@ body {
 	}
 }
 
+.wrapper{
+	position: relative;
+	overflow-x: hidden;
+}
 .flexbox-diamond {
 	display: flex;
 	justify-content: center;
@@ -262,44 +267,46 @@ body {
 	}
 }
 
-.testimonial {
-	border: 1px solid #ddd;
-	display: flex;
-	padding: 20px;
-	margin-bottom: 20px;
-	border-radius: 15px;
-	justify-content: center;
-	align-items: center;
-	color: #fff;
-	transition: transform 0.4s ease-out;
+.review-container {  display: grid;
+  grid-template-columns: auto auto auto auto auto;
+  grid-template-rows: auto auto auto auto auto;
+  gap: 10px;
+  grid-auto-flow: row;
+  grid-template-areas:
+    "review1 review1 review2 review2 review6"
+    "review1 review1 review2 review2 review6"
+    "review1 review1 review3 review3 review3"
+    "review4 review4 review3 review3 review3"
+    "review5 review5 review5 review5 review5";
+}
 
-	blockquote {
-		font-size: 16px;
+@media (width < 770px){
+	.review-container{
+		display: block;
 	}
 }
 
-.t1,
-.t3 {
-	background-color: #800080;
+.review-container div{
+	border-radius: 15px;
+	display: grid;
+	align-items: center;
+	padding: 10px;
 }
 
-.t2,
-.t6 {
-	background-color: #b300b3;
-}
+.review1 { grid-area: review1; background-color: #809bce; }
 
-.t4,
-.t5 {
-	background-color: #660066;
-}
+.review3 { grid-area: review3; background-color: #95b8d1;}
 
-.testimonial:hover {
-	z-index: 10;
-	transform: scale(1.1);
-	box-shadow: 2px 2px 5px grey;
-}
+.review4 { grid-area: review4; background-color: #b8e0d4;}
 
-b {
+.review5 { grid-area: review5; background-color: #d6eadf; }
+
+.review2 { grid-area: review2; background-color: #eac4d5;}
+
+.review6 { grid-area: review6; background-color: #f5e2ea; }
+
+
+h4 {
 	color: #7a0099;
 }
 
